Update backend deployment command to npm start
Changed the build command to start the backend service.

--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm ci
 
       - name: Build Backend
-        run: npm run build
+        run: npm start
 
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v1
