--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -1,49 +1,36 @@
-name: Backend CI/CD
+name: CI/CD Pipeline
 
 on:
-  push:
-    branches:
-      - main
+	push:
+		branches: [main]
 
 jobs:
-  deploy:
-    runs-on: ubuntu-latest
+	build-and-deploy:
+		runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
+		steps:
+			- name: Checkout code
+				uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
+			- name: Set up Node.js
+				uses: actions/setup-node@v3
+				with:
+					node-version: '18'
 
-      - name: Install Dependencies
-        run: npm ci
+			- name: Install dependencies
+				run: npm install
 
-      # ❌ DO NOT start the server in CI
-      # ✅ Only verify build (if applicable)
-      - name: Verify Backend
-        run: |
-          node -e "console.log('Backend build verified')"
+			- name: Run tests
+				run: npm test
 
-      - name: Deploy to EC2
-        uses: appleboy/ssh-action@v1
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_SSH_KEY }}
-          script: |
-            cd /var/www/backend
-            git pull origin main
-            npm ci
-
-            # Stop old process safely
-            pkill node || true
-
-            # Export Neon DB connection
-            export DATABASE_URL="${{ secrets.DATABASE_URL }}"
-            export NODE_ENV=production
-
-            # Start backend with env
-            nohup node index.js > app.log 2>&1 &
+			- name: Deploy to EC2
+				uses: appleboy/ssh-action@v0.1.10
+				with:
+					host: ${{ secrets.EC2_HOST }}
+					username: ubuntu
+					key: ${{ secrets.EC2_SSH_KEY }}
+					script: |
+						cd ~/payment-app-backend
+						git pull origin main
+						npm install
+						pm2 restart payment-backend || pm2 start index.js --name payment-backend
