--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -21,7 +21,7 @@ jobs:
         run: npm install
 
       - name: Run tests
-        run: npm test
+        run: npm start
 
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v0.1.10
