--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -21,15 +21,16 @@ jobs:
         run: npm install
 
       - name: Run tests
-        run: npm start
+        run: npm test
 
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v0.1.10
         with:
           host: ${{ secrets.EC2_HOST }}
-          username: ubuntu
+          username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
+            export DATABASE_URL="${{ secrets.DATABASE_URL }}"
             cd ~/payment-app-backend
             git pull origin main
             npm install
